WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33573
[Qt] [Symbian] SetWindow call in npapi plugin does not happen when the cooridnates are negative
https://bugs.webkit.org/show_bug.cgi?id=33573
Summary
[Qt] [Symbian] SetWindow call in npapi plugin does not happen when the coorid...
Laszlo Gombos
Reported
2010-01-12 21:00:29 PST
On Symbian when the plugin object goes out of the screen boundaries (while scrolling) updated coordinates are not received from webkit. SetWindow() is not called when the coordinates were negative.
Attachments
proposed patch
(1.37 KB, patch)
2010-01-12 21:07 PST
,
Laszlo Gombos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Laszlo Gombos
Comment 1
2010-01-12 21:07:51 PST
Created
attachment 46425
[details]
proposed patch
Yael
Comment 2
2010-01-13 06:44:02 PST
Like with every other patch that goes into webkit, it would be good to know what tests were run with this patch.
Simon Hausmann
Comment 3
2010-01-16 00:45:22 PST
Comment on
attachment 46425
[details]
proposed patch r=me. Shouldn't Srinidhi also be the author in the ChangeLog?
Laszlo Gombos
Comment 4
2010-01-17 21:43:25 PST
Comment on
attachment 46425
[details]
proposed patch Landed as
r53390
. Fixed author in the ChangeLog.
Simon Hausmann
Comment 5
2010-01-20 01:00:54 PST
Cherry-picked into qtwebkit-4.6 as commit e15bd5454732bab9ffff4e1e5a755f41fd4e2eff
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug