2010-01-17  Srinidhi Shreedhara  <srinidhi.shreedhara@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] [Symbian] SetWindow call in npapi plugin does not happen when the cooridnates are negative
        https://bugs.webkit.org/show_bug.cgi?id=33573

        * plugins/symbian/PluginViewSymbian.cpp:
        (WebCore::PluginView::setNPWindowIfNeeded): Remove tests for negative
        coordinates for early return.



Canonical link: https://commits.webkit.org/44791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53390 268f45cc-cd09-0410-ab3c-d52691b4dbfc